[NAVIGATION] fix z-index issues

--- a/assets/css/front/navigation.styl
+++ b/assets/css/front/navigation.styl
@@ -10,7 +10,7 @@
   font-family "hiso-dark", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   color black
   font-size 4em; font-weight normal
-  z-index 2
+  z-index 3
 
   span
     color black
@@ -33,7 +33,7 @@
 
 .hw-main-navigation
   absolute top px2em(-($main-border)) right
-  z-index 2
+  z-index 3
   overflow hidden
   width 33.3333333%
   padding-bottom 3em
